src/main/java/com/example/printforms/service/error/ErrorResponseEntity.java
package com.example.printforms.service.error;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

@Data
@NoArgsConstructor
@AllArgsConstructor
public class ErrorResponseEntity {
    private String exception;
    private String message;
}
